Fixed: Season actions on mobile not indicating when they are disabled

--- a/frontend/src/Components/Menu/MenuItem.css
+++ b/frontend/src/Components/Menu/MenuItem.css
@@ -1,6 +1,5 @@
 .menuItem {
   @add-mixin truncate;
-
   display: block;
   flex-shrink: 0;
   padding: 10px 20px;
@@ -16,4 +15,9 @@
     color: $menuItemHoverColor;
     text-decoration: none;
   }
+}
+
+.isDisabled {
+  color: $disabledColor;
+  pointer-events: none;
 }
